# HT_homework5

CSE598_Project5_Handout/CSE598_Project5_Handout/binaries/: Subprocess.py  norma_add  norma_add.c  normal_multi  normal_multi.c  openFHE_BFV  openFHE_BGV  seal_BFV  seal_BGV
CSE598_Project5_Handout/__MACOSX/: ._CSE598_Project5_Handout
HE_library_source_code/HE_library_source_code/SEAL/native/examples/: 0_added_bfv.cpp  0_added_bgv.cpp  0_added_ckks.cpp  5_ckks_basics.cpp  CMakeLists.txt  examples.cpp  examples.h
HE_library_source_code/HE_library_source_code/openfhe/src/pke/examples/: README.md  added-bfv.cpp  added-bgv.cpp  added-ckks.cpp
